Minor table alignment problems

--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -2,8 +2,9 @@ $def with (tm)
 <html>
 <head>
 <style type="text/css">
-  table th { text-align: right; padding: 1pt 25pt 1pt 1pt;
-  }
+table th { text-align: right; 
+           padding: 1pt 25pt 1pt 1pt;
+           }
 </style>  
 <title> Information for trademark </title>
 </head>
