Added framework to translate symbolic codes

--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -12,6 +12,8 @@ table th { text-align: right;
 $if tm:
   <table>
   <tr>
+    <th>Action key in official gazette</th><td>$tm['action_key']</td>
+  </tr><tr>
     <th>Word mark</th><td>$tm['mark_identification']</td>
   </tr><tr> 
     <th>Registration number</th><td>$tm['registration_number']</td>
